<resources>
    <string name="app_name">sample CON</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsignin">Sign-in</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="Idaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat Kembali</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail kontak</string>
    <string name="nama">Nama </string>
    <string name="notel">Nomor Telephon</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>


</resources>